--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,21 @@
+# Spring Application name
 spring.application.name=nutrisend-platform
+
+# Spring DataSource Configuration
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=12345
+spring.datasource.url=jdbc:mysql://localhost:3306/nutrisend?useSSL=false&serverTimezone=UTC
+
+# Spring Data JPA Configuration
+spring.jpa.show-sql=true
+
+# Spring Data JPA Hibernate Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.open-in-view=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.naming.physical-strategy=com.example.nutrisend.platform.shared.infrastructure.persistemce.jpa.configuration.strategy.SnakeCaseWithPluralizedTablePhysicalNamingStrategy
+
+# Elements take their values form maven pom.xml build-related information
+documentation.application.description=@project.description@
+documentation.application.version=@project.version@
