--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,7 @@ spring.jpa.hibernate.naming.physical-strategy=com.example.nutrisend.platform.sha
 # Elements take their values form maven pom.xml build-related information
 documentation.application.description=@project.description@
 documentation.application.version=@project.version@
+
+# JWT Configuration Properties
+authorization.jwt.secret = WriteHereYourSecretStringForTokenSigningCredentials
+authorization.jwt.expiration.days = 7
