--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,17 +3,21 @@ spring.application.name=nutrisend-platform
 
 # Spring DataSource Configuration
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=12345
-spring.datasource.url=jdbc:mysql://localhost:3306/nutrisend?useSSL=false&serverTimezone=UTC
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}
 
 # Spring Data JPA Configuration
 spring.jpa.show-sql=true
 
 # Spring Data JPA Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.open-in-view=true
+
+spring.user.datasource.driver-class-name=com.mysql.jdbc.driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+
+spring.jpa.open-in-view=true
 spring.jpa.hibernate.naming.physical-strategy=com.example.nutrisend.platform.shared.infrastructure.persistemce.jpa.configuration.strategy.SnakeCaseWithPluralizedTablePhysicalNamingStrategy
 
 # Elements take their values form maven pom.xml build-related information
