--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,23 +1,31 @@
 # Spring Application name
 spring.application.name=nutrisend-platform
 
+# Spring Application port
+server.port=45306
+
 # Spring DataSource Configuration
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.username=${DB_USER}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
-spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+spring.datasource.url=jdbc:mysql://junction.proxy.rlwy.net:45306/nutrisend
 
 # Spring Data JPA Configuration
 spring.jpa.show-sql=true
 
 # Spring Data JPA Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.open-in-view=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+# Swagger UI Configuration
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+
+# Spring Data JPA Hibernate Configuration
 
 spring.user.datasource.driver-class-name=com.mysql.jdbc.driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.format_sql=true
-
-spring.jpa.open-in-view=true
 spring.jpa.hibernate.naming.physical-strategy=com.example.nutrisend.platform.shared.infrastructure.persistemce.jpa.configuration.strategy.SnakeCaseWithPluralizedTablePhysicalNamingStrategy
 
 # Elements take their values form maven pom.xml build-related information
@@ -36,3 +44,6 @@ spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 # JWT Configuration Properties
 authorization.jwt.secret = WriteHereYourSecretStringForTokenSigningCredentials
 authorization.jwt.expiration.days = 7
+
+# Enable HTTPS
+server.forward-headers-strategy=native
