--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,15 @@
 # Spring Application name
 spring.application.name=nutrisend-platform
 
+
 # Spring Application port
-server.port=45306
+server.port=8080
 
 # Spring DataSource Configuration
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
-spring.datasource.url=jdbc:mysql://junction.proxy.rlwy.net:45306/nutrisend
+spring.datasource.username=grapeflow
+spring.datasource.password=]0c+yA7e9v}&7>AvxCz5jLxZEypzG9j#
+spring.datasource.url=jdbc:mysql://ls-f1e1ce37349b48a4f4cb7dffefd7a53a8f228cc3.c10ek6g0q2c8.us-east-1.rds.amazonaws.com/nutrisend?useSSL=true&serverTimezone=UTC
 
 # Spring Data JPA Configuration
 spring.jpa.show-sql=true
