--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,8 @@
 			<scope>test</scope>
 		</dependency>
 
+
+
 		<!-- SpringDoc OpenAPI for Swagger Documentation -->
 		<dependency>
 			<groupId>org.springdoc</groupId>
@@ -89,20 +91,28 @@
 
 	<build>
 		<plugins>
-			<!-- Spring Boot Maven Plugin -->
+			<!-- Configuración del plugin de compilación -->
 			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>3.3.1</version>
 				<configuration>
-					<excludes>
-						<exclude>
-							<groupId>org.projectlombok</groupId>
-							<artifactId>lombok</artifactId>
-						</exclude>
-					</excludes>
+					<encoding>UTF-8</encoding>
+				</configuration>
+			</plugin>
+			<!-- Configuración del plugin de compilación -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.13.0</version>
+				<configuration>
+					<source>17</source>
+					<target>17</target>
+					<encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
 		</plugins>
 	</build>
+
 
 </project>
