--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 	<description>nutrisend-platform</description>
 
 	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>17</java.version>
 	</properties>
 
