--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,10 @@ springdoc.swagger-ui.path=/swagger-ui.html
 
 # Enable HTTPS
 server.forward-headers-strategy=native
+
+spring.mail.host=smtp.your-email-provider.com
+spring.mail.port=587
+spring.mail.username=your-email@example.com
+spring.mail.password=your-password
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
